--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,15 @@ name: Deploy Blazor to GitHub Pages
 on:
   push:
     branches: [ main ]
+
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -27,3 +31,4 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/wwwroot
+          token: ${{ secrets.GITHUB_TOKEN }}
